// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Celecoxib Integration Test parses celecoxib 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 5,
      "substitutions": {
        "4": "N",
        "5": "N",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "F",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "F",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "F",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Celecoxib Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null] });
export const v3 = Ring({ atoms: 'C', size: 5, ringNumber: 2, bonds: ['=', null, '=', null, null] });
export const v4 = v3.substitute(4, 'N');
export const v5 = v4.substitute(5, 'N');
export const v6 = Linear(['C', 'F']);
export const v7 = Linear(['F']);
export const v8 = v6.attach(1, v7);
export const v9 = Linear(['F']);
export const v10 = v8.attach(1, v9);
export const v11 = Molecule([v1, v2, v5, v10]);"
`;

exports[`Meloxicam Integration Test parses meloxicam 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 5,
      "substitutions": {
        "3": "N",
        "5": "S",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Meloxicam Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null] });
export const v3 = v2.substitute(3, 'N');
export const v4 = v3.substitute(5, 'S');
export const v5 = Linear(['C']);
export const v6 = Molecule([v1, v4, v5]);"
`;

exports[`Piroxicam Integration Test parses piroxicam 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        null,
        "=",
        null,
        "=",
        null,
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 11,
      "substitutions": {
        "1": "N",
        "10": "S",
        "11": "O",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "N",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {
        "6": "N",
      },
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Piroxicam Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 11, bonds: [null, '=', null, '=', null, '=', null, '=', null, '=', null] });
export const v3 = v2.substitute(1, 'N');
export const v4 = v3.substitute(10, 'S');
export const v5 = v4.substitute(11, 'O');
export const v6 = Linear(['C', 'N']);
export const v7 = Linear(['O'], ['=']);
export const v8 = v6.attach(1, v7);
export const v9 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v10 = v9.substitute(6, 'N');
export const v11 = Molecule([v1, v5, v8, v10]);"
`;

exports[`Etodolac Integration Test parses etodolac 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            null,
            "=",
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {
            "3": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "6": [
              {
                "atoms": [
                  "C",
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Etodolac Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 0, 1, 1] });
export const v3 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 2, bonds: ['=', null, null, '=', null] });
export const v4 = v3.substitute(3, 'N');
export const v5 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, null, null, null, null] });
export const v6 = v5.substitute(5, 'O');
export const v7 = Linear(['C', 'C']);
export const v8 = v6.attach(6, v7);
export const v9 = Linear(['O'], ['=']);
export const v10 = FusedRing({ metadata: { rings: [{ ring: v2, start: 2, end: 7, atoms: [{ position: 2, depth: 0, value: 'C', rings: [1, 1] }, { position: 3, depth: 0, value: 'C', bond: '=', rings: [1] }, { position: 4, depth: 0, value: 'C', rings: [2, 1, 2] }, { position: 5, depth: 0, value: 'C', bond: '=', rings: [1, 2] }, { position: 6, depth: 1, value: 'C', rings: [1] }, { position: 7, depth: 1, value: 'C', bond: '=', rings: [1] }] }, { ring: v4, start: 4, end: 14, atoms: [{ position: 4, depth: 0, value: 'C', rings: [2, 1, 2] }, { position: 5, depth: 0, value: 'C', bond: '=', rings: [1, 2] }, { position: 12, depth: 0, value: 'N', rings: [2] }, { position: 13, depth: 0, value: 'C', rings: [3, 2, 3] }, { position: 14, depth: 0, value: 'C', bond: '=', rings: [2, 3] }] }, { ring: v8, start: 13, end: 18, atoms: [{ position: 13, depth: 0, value: 'C', rings: [3, 2, 3] }, { position: 14, depth: 0, value: 'C', bond: '=', rings: [2, 3] }, { position: 15, depth: 0, value: 'C', rings: [3] }, { position: 16, depth: 0, value: 'C', rings: [3] }, { position: 17, depth: 0, value: 'O', rings: [3] }, { position: 18, depth: 0, value: 'C', rings: [3] }] }], seqAtomAttachments: new Map([[9, [v9]]]) } });
export const v11 = Linear(['C', 'C']);
export const v12 = Molecule([v1, v10, v11]);"
`;

exports[`Ketorolac Integration Test parses ketorolac 1`] = `
{
  "components": [
    {
      "atoms": [
        "O",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {
            "4": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {
            "1": "N",
          },
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Ketorolac Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['O', 'C']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'C', size: 5 });
export const v5 = v4.substitute(4, 'N');
export const v6 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 3, bonds: [null, '=', null, '=', null] });
export const v7 = v5.fuse(3, v6);
export const v8 = Linear(['C']);
export const v9 = Linear(['O'], ['=']);
export const v10 = v8.attach(1, v9);
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v12 = Molecule([v3, v7, v10, v11]);"
`;

exports[`Rofecoxib Integration Test parses rofecoxib 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "S",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {
        "3": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        "=",
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 5,
      "substitutions": {
        "4": "O",
      },
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Rofecoxib Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'S']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Linear(['O'], ['=']);
export const v5 = v3.attach(2, v4);
export const v6 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null] });
export const v7 = Ring({ atoms: 'C', size: 5, ringNumber: 2, bonds: ['=', null, null, null, null] });
export const v8 = v7.substitute(4, 'O');
export const v9 = Linear(['O'], ['=']);
export const v10 = v8.attach(3, v9);
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v12 = Molecule([v5, v6, v10, v11]);"
`;

exports[`Etoricoxib Integration Test parses etoricoxib 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {
        "2": "N",
      },
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "S",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Etoricoxib Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null] });
export const v3 = v2.substitute(2, 'N');
export const v4 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: ['=', null, '=', null, '=', null] });
export const v5 = Linear(['S']);
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(1, v6);
export const v8 = Linear(['O'], ['=']);
export const v9 = v7.attach(1, v8);
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v11 = Molecule([v1, v3, v4, v9, v10]);"
`;

exports[`Nabumetone Integration Test parses nabumetone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "O",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "3": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Nabumetone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'O']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1] });
export const v3 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2, bonds: ['=', null, null, null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1] });
export const v4 = v2.fuse(2, v3, { metadata: { rings: [{ ring: v2, start: 2, end: 11, atoms: [{ position: 2, depth: 0, value: 'C', rings: [1, 1] }, { position: 3, depth: 0, value: 'C', bond: '=', rings: [1] }, { position: 4, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 9, depth: 1, value: 'C', bond: '=', rings: [2, 1] }, { position: 10, depth: 1, value: 'C', rings: [1] }, { position: 11, depth: 1, value: 'C', bond: '=', rings: [1] }] }, { ring: v3, start: 4, end: 9, atoms: [{ position: 4, depth: 0, value: 'C', rings: [2, 2, 1] }, { position: 5, depth: 0, value: 'C', bond: '=', rings: [2] }, { position: 6, depth: 0, value: 'C', rings: [2] }, { position: 7, depth: 1, value: 'C', rings: [2] }, { position: 8, depth: 1, value: 'C', rings: [2] }, { position: 9, depth: 1, value: 'C', bond: '=', rings: [2, 1] }] }] } });
export const v5 = Linear(['C', 'C', 'C', 'C']);
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(3, v6);
export const v8 = Molecule([v1, v4, v7]);"
`;

exports[`Oxaprozin Integration Test parses oxaprozin 1`] = `
{
  "components": [
    {
      "atoms": [
        "O",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 5,
      "substitutions": {
        "2": "N",
        "5": "O",
      },
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Oxaprozin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['O', 'C', 'C', 'C']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null] });
export const v5 = v4.substitute(2, 'N');
export const v6 = v5.substitute(5, 'O');
export const v7 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v8 = Molecule([v3, v6, v7]);"
`;
